# web_scraping

./: README.md  pyproject.toml  selenium_example.py  test_patents.txt  webscraping.ipynb
data/: noticia_0.json  noticia_100.json  noticia_101.json  noticia_104.json  noticia_105.json  noticia_109.json  noticia_119.json  noticia_120.json  noticia_122.json  noticia_125.json  noticia_126.json  noticia_130.json  noticia_137.json  noticia_138.json  noticia_139.json  noticia_14.json  noticia_142.json  noticia_150.json  noticia_154.json  noticia_157.json  noticia_160.json  noticia_163.json  noticia_166.json  noticia_168.json  noticia_170.json  noticia_171.json  noticia_173.json  noticia_174.json  noticia_175.json  noticia_189.json  noticia_191.json  noticia_193.json  noticia_195.json  noticia_199.json  noticia_204.json  noticia_210.json  noticia_211.json  noticia_212.json  noticia_213.json  noticia_218.json  (+37 more)
data_2024/: noticia_110.json  noticia_116.json  noticia_121.json  noticia_124.json  noticia_127.json  noticia_128.json  noticia_132.json  noticia_134.json  noticia_136.json  noticia_143.json  noticia_144.json  noticia_147.json  noticia_148.json  noticia_153.json  noticia_155.json  noticia_158.json  noticia_16.json  noticia_161.json  noticia_162.json  noticia_164.json  noticia_165.json  noticia_17.json  noticia_182.json  noticia_183.json  noticia_185.json  noticia_186.json  noticia_190.json  noticia_192.json  noticia_194.json  noticia_201.json  noticia_202.json  noticia_208.json  noticia_209.json  noticia_21.json  noticia_217.json  noticia_219.json  noticia_220.json  (+388 more)
(+621 files in other folders)
