[tool.poetry]
name = "scrapping"
version = "0.1.0"
description = ""
authors = ["thiagorr162 <thiagorr162@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.3"
notebook = "^7.3.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
matplotlib = "^3.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
